# plover_michela

./: MANIFEST.in  README.md  README.rst  plover_michela.py  pyproject.toml  setup.cfg  setup.py  tox.ini
plover_michela/: machine.py  system.py
plover_michela/assets/: italian_words.txt  michela_main.json  michela_principale.json  michela_punteggiaturacomandi.json  michela_sillabico.json
plover_michela/dictionaries/: michela_commands.json  michela_main.json  michela_main.xlsx  michela_numbers.json  michela_orthographic.json  michela_phonetic.json  michela_punctuation_and_spacing.json
plover_michela/system/: base.py  orthographic.py  phonetic.py
test/: __init__.py  conftest.py  test_blackbox.py  test_orthography.py
