[metadata]
name = plover_michela
version = 0.1.5
description = Michela (Italian system) support for Plover
long_description = file: README.rst
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_michela
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev1
include_package_data = True
packages =
	plover_michela
	plover_michela.system

[options.entry_points]
plover.system =
	Michela (phonetic) = plover_michela.system.phonetic
	Michela (orthographic) = plover_michela.system.orthographic

# vim: commentstring=#\ %s list
