[metadata]
name = plover_michela
version = 1.0.0.dev0
description = Michela (Italian system) support for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_michela
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords = plover plover_plugin

[options]
zip_safe = True
python_requires = >=3.6
install_requires =
	plover>=4.0.0.dev1
include_package_data = True
packages =
	plover_michela
	plover_michela.system

[options.entry_points]
plover.system =
	Michela (phonetic) = plover_michela.system.phonetic
	Michela (orthographic) = plover_michela.system.orthographic

# vim: commentstring=#\ %s list
