[metadata]
name = plover_michela
version = 1.0.1
description = Michela (Italian system) support for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_michela
project_urls =
	Documentation = https://github.com/Sillabix/Plover-Michela
	Source Code = https://github.com/benoit-pierre/plover_michela
	Issue Tracker = https://github.com/benoit-pierre/plover_michela/issues
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords = plover plover_plugin

[options]
zip_safe = True
python_requires = >=3.6
install_requires =
	plover>=4.0.0.dev1
	plover-midi>=0.2.6
include_package_data = True
packages =
	plover_michela

[options.extras_require]
test =
	libcst
	pytest

[options.entry_points]
plover.machine =
    Michela Keyboard (MIDI, 2 octaves) = plover_michela.machine:MichelaKeyboardMidi2
    Michela Keyboard (MIDI, 3+ octaves) = plover_michela.machine:MichelaKeyboardMidi3p
plover.system =
	Michela = plover_michela.system

# vim: commentstring=#\ %s list
